# newsletter-api

./: Cargo.toml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
src/: lib.rs  main.rs
tests/: health_check.rs
