[package]
name = "newsletter_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_api"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"

# Linking phase for Windows
# ```
# cargo install -f cargo-binutils
# rustup component add llvm-tools-preview
# ```
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# Linking phase for Linux
# ```
# Debian - sudo aptitude install lld clang
# Arch - sudo pacman -S lld clang
# ```
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker-clang", "-C", "link-arg=-fuse-ld=lld"]

# Linking phase for macOS
# ```
# Homebrew - brew install michaeleisel/zld/zld
# ```
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
